--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rustls = "0.21.2"
+rustls = "0.21.5"
 rustls-pemfile = "1.0.2"
 mio = {version="0.7", features= ["net", "os-poll"]}
 serde = { version = "1.0", features = ["derive"] }
 docopt="1"
+log = "0.4.0"
+env_logger = "0.9.0"
